crates/config/macros/tests/ui/fail/env_test/other_exprs.stderr
error: expected either literal string, a path-like identifier, or a function call expression
  --> tests/ui/fail/env_test/other_exprs.rs:24:37
   |
24 | #[env_test(crate = ::azalia_config, [hello, world] = "world")]
   |                                     ^

error: expected either literal string, a path-like identifier, or a function call expression
  --> tests/ui/fail/env_test/other_exprs.rs:27:37
   |
27 | #[env_test(crate = ::azalia_config, async {} = "world")]
   |                                     ^^^^^

error: expected either literal string, a path-like identifier, or a function call expression
  --> tests/ui/fail/env_test/other_exprs.rs:30:37
   |
30 | #[env_test(crate = ::azalia_config, hello.await = "world")]
   |                                     ^^^^^

error: expected either literal string, a path-like identifier, or a function call expression
  --> tests/ui/fail/env_test/other_exprs.rs:33:37
   |
33 | #[env_test(crate = ::azalia_config, a + b = "world")]
   |                                     ^

error: expected either literal string, a path-like identifier, or a function call expression
  --> tests/ui/fail/env_test/other_exprs.rs:36:37
   |
36 | #[env_test(crate = ::azalia_config, !a = "world")]
   |                                     ^

error: expected either literal string, a path-like identifier, or a function call expression
  --> tests/ui/fail/env_test/other_exprs.rs:39:37
   |
39 | #[env_test(crate = ::azalia_config, (async {}) = "world")]
   |                                     ^
